--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,28 +8,30 @@
     tools:context=".NewsList">
 
 
- <com.google.android.material.appbar.AppBarLayout
-     android:layout_width="match_parent"
-     android:layout_height="wrap_content">
     <androidx.appcompat.widget.Toolbar
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:id="@+id/toolbar1"
+        android:id="@+id/toolbar2"
+        app:title="Search"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         app:layout_scrollFlags="enterAlways|scroll"
         android:background="@color/indigo_800"
         app:titleTextColor="@color/white"/>
- </com.google.android.material.appbar.AppBarLayout>
+
+
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/search_view"
+        android:layout_below="@id/toolbar2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:ignore="NotSibling" />
 
     <androidx.recyclerview.widget.RecyclerView
 
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-        android:layout_below="@+id/toolbar1"
+        android:layout_below="@+id/search_view"
         tools:listitem="@layout/list_item"
-        android:id="@+id/rcview"
+        android:id="@+id/rcview_search"
         android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</RelativeLayout>
