--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -12,13 +12,14 @@
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <RelativeLayout
-         android:layout_margin="8dp"
+         android:layout_margin="3dp"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="2"
          android:orientation="vertical">
          <TextView
-             android:fontFamily="@font/roboto_meduim"
+             android:fontFamily="@font/opensans"
+             android:textColor="@color/black"
              android:text="Heading"
              android:id="@+id/title"
              android:textSize="22sp"
@@ -27,14 +28,14 @@
              android:layout_height="wrap_content"/>
 
          <TextView
-             android:layout_below="@id/title"
-             android:text="BBC"
              android:id="@+id/source"
-             android:textSize="15sp"
-             android:maxLines="1"
-             android:layout_marginTop="6dp"
              android:layout_width="wrap_content"
-             android:layout_height="wrap_content"/>
+             android:layout_height="wrap_content"
+             android:layout_below="@id/title"
+             android:layout_marginTop="6dp"
+             android:maxLines="1"
+             android:text="BBC"
+             android:textSize="15sp" />
          <TextView
              android:layout_below="@id/source"
              android:text="wednesday"
