--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".Splashscreen">
+    tools:context=".activity.Splashscreen">
 
 <com.airbnb.lottie.LottieAnimationView
     android:elevation="5dp"
