--- a/app/src/main/res/layout/activity_news_list.xml
+++ b/app/src/main/res/layout/activity_news_list.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context=".activity.NewsList">
+    tools:context=".activity.NewsActivity">
 
 
  <com.google.android.material.appbar.AppBarLayout
